Refactor AI message functionality in FileCollectorFrame: Replace template management with Groovy scripts for dynamic message generation. Update README to document new script usage and available variables. Enhance UI with a dropdown for script selection and add a button to open the configuration directory.